[gd_scene load_steps=19 format=3 uid="uid://bjpdfi2sgn0us"]

[ext_resource type="Script" path="res://scripts/actors/slime_enemy.gd" id="1_w5ear"]
[ext_resource type="Script" path="res://scripts/resources/ActorResource.gd" id="2_3hi1f"]
[ext_resource type="Texture2D" uid="uid://5l4h3prq1jmg" path="res://assets/sprites/Tilesets/Player.png" id="3_cqchn"]
[ext_resource type="AudioStream" uid="uid://cca8moagnjv76" path="res://Sound Effects/Slime_movement/slime.mp3" id="4_a2gnf"]

[sub_resource type="Resource" id="Resource_651yb"]
script = ExtResource("2_3hi1f")
name = "Slime"
health = 5
speed = 40
jump_height = -600
acenstion_time = 0.5
decension_time = 0.5

[sub_resource type="AtlasTexture" id="AtlasTexture_67r3g"]
atlas = ExtResource("3_cqchn")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttaa6"]
atlas = ExtResource("3_cqchn")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogne4"]
atlas = ExtResource("3_cqchn")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt3tv"]
atlas = ExtResource("3_cqchn")
region = Rect2(224, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kocby"]
atlas = ExtResource("3_cqchn")
region = Rect2(256, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgiac"]
atlas = ExtResource("3_cqchn")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b0fr"]
atlas = ExtResource("3_cqchn")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp1qj"]
atlas = ExtResource("3_cqchn")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwxrw"]
atlas = ExtResource("3_cqchn")
region = Rect2(96, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4yrea"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67r3g")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_ttaa6")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_67r3g")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ogne4")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_mt3tv")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_kocby")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_vgiac")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_8b0fr")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_pp1qj")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_hwxrw")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5d8m"]
size = Vector2(300, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_5axqb"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_igxjb"]

[node name="Slime Enemy" type="CharacterBody2D"]
position = Vector2(0, -5)
collision_layer = 4
script = ExtResource("1_w5ear")
_actor_resource = SubResource("Resource_651yb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_4yrea")
animation = &"Death"

[node name="Collision Area" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(0, 8)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Collision Area"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_t5d8m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_5axqb")

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_igxjb")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_a2gnf")

[connection signal="body_entered" from="AnimatedSprite2D/Collision Area" to="." method="_on_collision_area_body_entered"]
[connection signal="body_shape_exited" from="AnimatedSprite2D/Collision Area" to="." method="_on_collision_area_body_shape_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
